- merge code from main branch

--- a/src/repl/CMakeLists.txt
+++ b/src/repl/CMakeLists.txt
@@ -2,6 +2,7 @@
     repldef.cpp
     lruhashreplbridge.cpp
     replprgrsstrkr.cpp
+    jsonstatus.cpp
     nodeinfo.cpp
     repllistener.cpp
     replconn.cpp
