update project name.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
-project(replicator)
+project(lsmcd)
 
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 include_directories( include )
