I can't believe anything works!

--- a/src/lsr/CMakeLists.txt
+++ b/src/lsr/CMakeLists.txt
@@ -9,6 +9,9 @@ cmake_policy(SET CMP0002 OLD)
 SET(lsr_STAT_SRCS
     ls_lock.c
     xxhash.c
+    ls_hash.c
+    ls_xpool.c
+    ls_pool.c
 )
 
 add_library(lsr STATIC ${lsr_STAT_SRCS} )
