UDS support and fixed some bugs in regular (non-KDevelop) make

--- a/src/lsr/Makefile.am
+++ b/src/lsr/Makefile.am
@@ -5,6 +5,6 @@ INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/src
 
 liblsr_a_METASOURCES = AUTO
 
-liblsr_a_SOURCES = ls_lock.c xxhash.c
+liblsr_a_SOURCES = ls_lock.c xxhash.c ls_hash.c ls_pool.c ls_xpool.c
 
 ####### kdevelop will overwrite this part!!! (end)############
