Better reporting and a bit more tolerant of command line parameters

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,5 +27,6 @@ link_directories()
 #target_link_libraries(replicator replicate log4cxx util pthread)
 #target_link_libraries(replicator lsshm replicate log4cxx edio util pthread sasl2 rt z)
 target_link_libraries(lsmcd lcrepl lsmemcache repl lsshm lsr log4cxx edio socket util pthread sasl2 rt z crypt ssl crypto   )
+#target_link_libraries(lsmcd lcrepl lsmemcache repl lsshm lsr log4cxx edio socket util pthread dl db /home/user/proj/cyrus-sasl/lib/.libs/libsasl2.a rt z crypt ssl crypto   )
 #target_link_libraries(ls_shmhashstat lsmemcache lsshm replicate lsr log4cxx edio socket util pthread sasl2 rt)
 
